# django-test

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  README.md  gocd-test.yml  makefile  pipeline.gocd.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
project/: pytest.ini
project/accounts/: models.py  tests.py  urls.py  views.py
project/accounts/migrations/: 0001_initial.py
project/core/: authentication.py  healthchecker.py  test_authentication.py
project/entry/: models.py  tests.py  urls.py  views.py
project/entry/migrations/: 0001_initial.py
project/project/: settings.py  urls.py
project/utils/: mocks.py
