[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["iiii4966 <dlarkqrl4966@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
Django = "^3.1.6"
bcrypt = "^3.2.0"
PyJWT = "^2.0.1"
gunicorn = "^20.0.4"
django-cors-headers = "^3.7.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
